# sigilforge

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: CODEOWNERS  markdown-link-check.json
.github/workflows/: ci.yml  dependencies.yml  docs-check.yml  release.yml
docs/: ARCHITECTURE.md  INTERFACES.md  NEXT_STEPS.md  RELEASE.md  ROADMAP.md  STRUCTURE.md  TROUBLESHOOTING.md
docs/audits/claude/2025-12-09-tech-audit/: 00-executive-summary.md  01-code-quality-architecture.md  02-testing-coverage.md  03-documentation.md  04-developer-experience.md  05-security.md  06-feature-completeness.md  07-recommendations.md
docs/codex/: ARCHITECTURE.md  README.md  ROADMAP.md
docs/versions/v0.2.0/: INTERFACES.md
scarab-sigilforge/: Cargo.toml
scarab-sigilforge/src/: lib.rs  status.rs
sigilforge-cli/: Cargo.toml
sigilforge-cli/src/: client.rs  main.rs
sigilforge-cli/tests/: remove_account_test.rs
sigilforge-client/: Cargo.toml  README.md
sigilforge-client/src/: client.rs  fallback.rs  lib.rs  resolve.rs  socket.rs  types.rs
sigilforge-core/: Cargo.toml
sigilforge-core/src/: account_store.rs  error.rs  lib.rs  model.rs  provider.rs  resolve.rs  store.rs  token.rs  token_manager.rs
sigilforge-core/src/oauth/: device_code.rs  mod.rs  pkce.rs
sigilforge-core/src/store/: keyring.rs  memory.rs  mod.rs
sigilforge-core/tests/: account_lifecycle.rs  token_refresh.rs
sigilforge-daemon/: Cargo.toml
sigilforge-daemon/src/: config.rs  lib.rs  main.rs
sigilforge-daemon/src/api/: handlers.rs  mod.rs  server.rs  types.rs
sigilforge-daemon/tests/: error_format_test.rs  rpc_test.rs  shutdown_test.rs
sigilforge-tui/: Cargo.toml  README.md
sigilforge-tui/src/: app.rs  main.rs  ui.rs
