[workspace]
resolver = "2"
members = [
    "sigilforge-core",
    "sigilforge-daemon",
    "sigilforge-cli",
    "sigilforge-client",
    "sigilforge-tui",
    "scarab-sigilforge",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["raibid-labs"]
repository = "https://github.com/raibid-labs/sigilforge"

[workspace.dependencies]
# Internal crates
sigilforge-core = { path = "sigilforge-core" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
toml = "0.8"
directories = "5.0"

# Secret storage
keyring = "3"

# OAuth2
oauth2 = "4.4"

# HTTP client (for OAuth flows)
reqwest = { version = "0.12", features = ["json"] }

# URL handling
url = "2.5"

# Unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }

# Testing
tempfile = "3.13"

# Synchronization primitives
parking_lot = "0.12"

# Memory zeroing for secrets
zeroize = { version = "1.8", features = ["zeroize_derive"] }
