[package]
name = "sigilforge-cli"
description = "CLI tool for Sigilforge credential management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sigilforge"
path = "src/main.rs"

[dependencies]
# Internal crates
sigilforge-core = { workspace = true, features = ["oauth", "keyring-store"] }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Configuration
directories = { workspace = true }

# JSON-RPC client
jsonrpsee = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
