[package]
name = "sigilforge-client"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client library for Sigilforge authentication daemon"
keywords = ["authentication", "oauth", "secrets", "credentials"]
categories = ["authentication", "api-bindings"]
readme = "README.md"

[features]
default = ["fallback-env", "fallback-config"]
fallback-env = []
fallback-config = ["dep:toml"]

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }

# Optional dependencies
toml = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
