[package]
name = "sigilforge-daemon"
description = "Background daemon service for Sigilforge credential management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sigilforged"
path = "src/main.rs"

[dependencies]
# Internal crates
sigilforge-core = { workspace = true, features = ["full"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
toml = { workspace = true }
directories = { workspace = true }
