[package]
name = "sigilforge-daemon"
description = "Background daemon service for Sigilforge credential management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "sigilforge_daemon"
path = "src/lib.rs"

[[bin]]
name = "sigilforged"
path = "src/main.rs"

[dependencies]
# Internal crates
sigilforge-core = { workspace = true, features = ["keyring-store"] }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
toml = { workspace = true }
directories = { workspace = true }

# Time handling
chrono = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true }

# Async traits
async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
